# node-server

./: Cargo.toml  data.html  sleep.html
src/: lib.rs  main.rs  network_types.rs  scrap.rs  state_machine.rs
src/actions/: request_handler.rs
src/general/: mod.rs  state_machine_types.rs
src/state_machine/: follower.rs
