[package]
name = "node-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
quicli = "0.4.0"
structopt = "0.3.26"
threadpool = "1.8.1"
tokio = { version = "1.27.0", features = ["full"] }
